--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,15 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+h1,
+h2,
+h3 {
+    margin-top: 0;
+}
+
 .list {
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -43,8 +51,16 @@ body {
     text-decoration: none
 }
 
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+    outline: 2px solid tomato;
+}
 
-/* Header */
+.flex {
+    display: flex;
+}
 
 
 /* Logo */
@@ -70,15 +86,41 @@ body {
 
 /* Header */
 
+.page-header {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.container.flex {
+    align-items: center;
+}
+
 
 /* Site nav */
 
-.site-nav .link {
-    color: var(--text-secondary-color);
+.site-nav {
+    display: flex;
+    margin-left: 40px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+}
+
+.nav-flex {
+    display: flex;
+    align-items: center;
+}
+
+.site-nav .item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.site-nav .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--text-secondary-color);
 }
 
 .site-nav .link:hover,
@@ -95,10 +137,16 @@ body {
 /* Auth-nav */
 
 .auth-nav {
+    display: flex;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    margin-left: auto;
+}
+
+.auth-nav>.iteam:first-child {
+    margin-right: 50px;
 }
 
 .auth-nav .link {
@@ -113,15 +161,20 @@ body {
 
 /* Hero */
 
-.hero .hero-title {
+.hero {
+    text-align: center;
     background-color: #000000;
+}
+
+.hero .hero-title {
     color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 
@@ -134,10 +187,23 @@ body {
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 50px;
 }
 
 
 /* Advantages */
+
+.flex-element {
+    width: 270px;
+    outline: 2px solid tomato;
+}
+
+.list.advantages {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    justify-content: space-between;
+}
 
 .advantages .title {
     color: var(--text-title-color);
@@ -146,6 +212,8 @@ body {
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .section.advantages .section-text {
@@ -153,6 +221,21 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
+/* What are we doing */
+
+.doing {
+    padding-top: 0;
+    padding-bottom: 94px;
+}
+
+.doing .list {
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -160,6 +243,13 @@ body {
 
 .team {
     background-color: var(--bac-secondary-color);
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.team .list {
+    display: flex;
+    justify-content: space-between;
 }
 
 .name-text {
@@ -168,6 +258,7 @@ body {
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
+    margin-bottom: 10px;
 }
 
 .section.team .section-text {
@@ -175,28 +266,51 @@ body {
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 
 /* Button */
 
-.button.primary:hover,
-.button.primary:focus,
-.button.primary:active,
 .button {
+    display: inline-block;
+    padding: 6px 22px;
     background-color: var(--batton-secondary-color);
     color: var(--text-secondary-color);
-    border: 0;
+    border: 0px solid transparent;
     border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-decoration: none;
+    text-align: center;
 }
 
 .button:hover,
 .button:focus,
-.button:active,
+.button:active {
+    background-color: var(--batton-primary-color);
+    color: var(--white-color);
+}
+
 .button.primary {
     background-color: var(--batton-primary-color);
     color: var(--white-color);
+    padding: 10px 32px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+}
+
+.button.primary:hover,
+.button.primary:focus,
+.button.primary:active {
+    background-color: var(--batton-secondary-color);
+    color: var(--batton-primary-color);
     cursor: pointer;
+    padding: 10px 32px;
 }
 
 .button.secondary:hover,
@@ -204,7 +318,6 @@ body {
 .button.secondary:active,
 .button.current.secondary {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
 }
 
 
@@ -213,6 +326,8 @@ body {
 .footer {
     background-color: #2F303A;
     color: var(--white-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer .logo.link {
@@ -232,6 +347,8 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    padding: 0;
+    margin-top: 20px;
 }
 
 .footer .link:hover,
@@ -241,6 +358,10 @@ body {
 
 
 /* Portfolio */
+
+.portfolio {
+    margin-bottom: 94px;
+}
 
 .portfolio .current {
     background-color: var(--accent-color);
@@ -254,6 +375,7 @@ body {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin: 20px 24px 0 24px;
 }
 
 .portfolio .section-text {
@@ -261,4 +383,27 @@ body {
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
+    margin: 0 24px 20px 24px;
+}
+
+.portfolio .iteam {
+    border: 1px solid #EEEEEE;
+    width: calc((100% - 60px) / 3);
+}
+
+.portfolio .list.flex {
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.portfolio .list.flex {
+    flex-wrap: wrap;
+}
+
+.portfolio .iteam:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.portfolio .iteam:not(:nth-last-child(-n+3)) {
+    margin-bottom: 30px;
 }
