--- a/css/styles.css
+++ b/css/styles.css
@@ -37,14 +37,21 @@ body {
 
 h1,
 h2,
-h3 {
-    margin-top: 0;
+h3,
+p {
+    margin: 0;
 }
 
-.list {
+ul {
     padding: 0;
     margin: 0;
     list-style: none;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .link {
@@ -55,7 +62,7 @@ h3 {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 .flex {
@@ -87,8 +94,7 @@ h3 {
 /* Header */
 
 .page-header {
-    padding-top: 32px;
-    padding-bottom: 32px;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .container.flex {
@@ -100,7 +106,7 @@ h3 {
 
 .site-nav {
     display: flex;
-    margin-left: 40px;
+    margin-left: 93px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -162,12 +168,14 @@ h3 {
 /* Hero */
 
 .hero {
+    padding: 200px 0;
     text-align: center;
     background-color: #000000;
 }
 
 .hero .hero-title {
     color: var(--white-color);
+    width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -175,10 +183,16 @@ h3 {
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
 /* Section */
+
+.section {
+    padding: 94px;
+}
 
 .section .section-title {
     color: var(--text-title-color);
@@ -194,18 +208,17 @@ h3 {
 
 /* Advantages */
 
-.flex-element {
-    width: 270px;
-    outline: 2px solid tomato;
-}
-
-.list.advantages {
-    padding-top: 94px;
-    padding-bottom: 94px;
+.advantages {
+    display: flex;
     justify-content: space-between;
 }
 
-.advantages .title {
+.advantages-item {
+    width: 270px;
+    /* outline: 2px solid tomato; */
+}
+
+.advantages-title {
     color: var(--text-title-color);
     font-weight: 700;
     font-size: 14px;
@@ -216,7 +229,7 @@ h3 {
     margin-bottom: 10px;
 }
 
-.section.advantages .section-text {
+.advantages-text {
     color: var(--text-primary-color);
     font-size: 14px;
     line-height: 1.71;
@@ -229,30 +242,38 @@ h3 {
 /* What are we doing */
 
 .doing {
+    display: flex;
     padding-top: 0;
-    padding-bottom: 94px;
 }
 
-.doing .list {
-    display: flex;
-    justify-content: space-between;
+.doing-item:not(:last-child) {
+    margin-right: 30px;
 }
 
 
 /* Team */
 
 .team {
-    background-color: var(--bac-secondary-color);
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
-.team .list {
     display: flex;
-    justify-content: space-between;
+    background-color: var(--bac-secondary-color);
 }
 
-.name-text {
+.team-item {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.team-desc {
+    background: #FFFFFF;
+    padding: 30px 0;
+    text-align: center;
+}
+
+.team-title {
     color: var(--text-secondary-color);
     font-weight: 500;
     font-size: 16px;
@@ -261,7 +282,7 @@ h3 {
     margin-bottom: 10px;
 }
 
-.section.team .section-text {
+.team-text {
     color: var(--text-primary-color);
     font-size: 16px;
     line-height: 1.18;
@@ -338,17 +359,23 @@ h3 {
     color: rgba(255, 255, 255, 0.6);
 }
 
+.address {
+    margin-top: 20px;
+}
+
 .footer .link.link-address {
     color: var(--white-color);
 }
 
-.footer.list {
+.address-desc {
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    padding: 0;
-    margin-top: 20px;
+}
+
+.address-item:not(:last-child) {
+    margin-bottom: 9px;
 }
 
 .footer .link:hover,
@@ -359,17 +386,51 @@ h3 {
 
 /* Portfolio */
 
-.portfolio {
-    margin-bottom: 94px;
+
+/* Filter */
+
+.filter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 34px;
 }
 
-.portfolio .current {
+.filter-iteam:not(:last-child) {
+    margin-right: 8px;
+}
+
+.filter .current {
     background-color: var(--accent-color);
     color: var(--white-color);
     cursor: pointer
 }
 
-.portfolio .title {
+
+/* Gallery */
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gallery .iteam {
+    width: calc((100% - 60px) / 3);
+}
+
+.gallery .iteam:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.gallery .iteam:not(:nth-last-child(-n+3)) {
+    margin-bottom: 30px;
+}
+
+.gallery-desc {
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+}
+
+.gallery-title {
     color: var(--text-title-color);
     font-weight: 700;
     font-size: 18px;
@@ -378,32 +439,10 @@ h3 {
     margin: 20px 24px 0 24px;
 }
 
-.portfolio .section-text {
+.gallery-text {
     color: var(--text-primary-color);
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
     margin: 0 24px 20px 24px;
-}
-
-.portfolio .iteam {
-    border: 1px solid #EEEEEE;
-    width: calc((100% - 60px) / 3);
-}
-
-.portfolio .list.flex {
-    justify-content: center;
-    margin-bottom: 50px;
-}
-
-.portfolio .list.flex {
-    flex-wrap: wrap;
-}
-
-.portfolio .iteam:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
-
-.portfolio .iteam:not(:nth-last-child(-n+3)) {
-    margin-bottom: 30px;
 }
